I Fixed a card components and modify our Slide Components

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <title></title>
   <link href="css/bootstrap-4.5.0-dist/css/bootstrap.css" media="all" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Great+Vibes&family=IBM+Plex+Sans:ital@1&family=Krona+One&family=Montserrat:ital@1&family=Nanum+Gothic&family=Ubuntu:ital@1&display=swap" rel="stylesheet">
   <nav class="navbar fixed-top navbar-expand-lg">
 
@@ -258,10 +258,10 @@
   </div>
   <div id="section8">
     <div class="container">
-      <div class="card-container">
+
       <div class="row row-card">
-          <div class="card">
-            <div class="card-body">
+          <div id="card" class="card col-lg-4">
+            <div  class="card-body">
               <div class="card-img">
                 <img class="img-fluid card-img-size" src="./images/card/card-cuisine.png" alt="Plan View">
               </div>
@@ -276,7 +276,7 @@
               </div>
             </div>
           </div>
-          <div class="card">
+          <div class="card col-lg-4">
             <div class="card-body">
               <div class="card-img">
                 <img class="img-fluid card-img-size" src="./images/card/card-drink.png" alt="Plan View">
@@ -292,7 +292,7 @@
               </div>
             </div>
           </div>
-          <div class="card">
+          <div class="card col-lg-4">
             <div class="card-body">
               <div class="card-img">
                 <img class="img-fluid card-img-size" src="./images/card/card_room-door.png" alt="Plan View">
@@ -306,7 +306,7 @@
               </div>
             </div>
           </div>
-          <div class="card">
+          <div class="card col-lg-4">
             <div class="card-body">
               <div class="card-img">
                 <img class="img-fluid card-img-size" src="./images/card/card-dartboard.png" alt="Plan View">
@@ -320,7 +320,7 @@
               </div>
             </div>
           </div>
-          <div class="card">
+          <div class="card col-lg-4">
             <div class="card-body">
               <div class="card-img">
                 <img class="img-fluid card-img-size" src="./images/card/card-snowboard.png" alt="Plan View">
@@ -334,7 +334,7 @@
               </div>
             </div>
           </div>
-          <div class="card">
+          <div class="card col-lg-4">
             <div class="card-body">
               <div class="card-img">
                 <img class="img-fluid card-img-size" src="./images/card/card-swimming-pool.svg" alt="Plan View">
@@ -351,11 +351,10 @@
           </div>
         </div>
       </div>
-    </div>
 
   </div>
 
-  <script src="https://connect.up.ac.za/https/ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="./apps.js" charset="utf-8"></script>
 
 </body>
