--- a/template.html
+++ b/template.html
@@ -26,108 +26,33 @@
 <body>
 
   <body>
+ <div class="container">
+   <div class="row">
+     <div class=" div-container" style="background-color: red;  ">
+        red
+     </div>
+     <div class=" div-container" style="background-color: blue; ">
+    blue
+     </div>
+     <div class=" div-container" style="background-color: yellow; ">
+  yellow
+     </div>
+     <div class="col-md div-container" style="background-color: green; ">
+green
+     </div>
+     <div class="col-md div-container" style="background-color: grey; ">
+grey
+     </div>
+     <div class="col-md div-container" style="background-color: black; ">
+black
+     </div>
 
-    <div id="section6">
-      <div class="container">
+   </div>
 
-          <div class="cards-holder">
-            <div class="row row-card">
-            <div class="card">
-              <div class="card-body">
-                <div class="card-img">
-                  <img class="img-fluid card-img-size" src="./images/card/card-cuisine.png" alt="Plan View">
-                </div>
-                <div class="card-title">
-                  <h4 class="card-title">Exceptional Food</h4>
-                </div>
-                <div class="card-text">
-                  <p class="card-text">The unique flavors you will find in our
-                    restaurant will bring you one step closer to feeling like a
-                    local. You can grab a quick croissant
-                    or sit down for an exceptional full course dinner</p>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <div class="card-img">
-                  <img class="img-fluid card-img-size" src="./images/card/card-drink.png" alt="Plan View">
-                </div>
-                <div class="card-title">
-                  <h4 class="card-title">Bar Drinks</h4>
-                </div>
-                <div class="card-text">
-                  <p class="card-text">We spoke to bartenders to find out the
-                    popular drinks they hate making the most. See which ones to avoid to
-                     stay in their good graces.
-                    That's how you get a strawberry daiquiri made with scotch.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <div class="card-img">
-                  <img class="img-fluid card-img-size" src="./images/card/card_room-door.png" alt="Plan View">
-                </div>
-                <div class="card-title">
-                  <h4 class="card-title">Cozy Rooms</h4>
-                </div>
-                <div class="card-text">
-                  <p class="card-text">A room needs to be more than just an assortment of furniture. What’s more,
-                     the most thoughtfully designed of spaces can evoke a whole range of emotions in those who experience it.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <div class="card-img">
-                  <img class="img-fluid card-img-size" src="./images/card/card-dartboard.png" alt="Plan View">
-                </div>
-                <div class="card-title">
-                  <h4 class="card-title">Game Room</h4>
-                </div>
-                <div class="card-text">
-                  <p class="card-text">The whole family will enjoy the game room at The Gast Hotel & Suites.
-                     With a variety of the newest video games and “old school” games you’ll definitely find something for everyone.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <div class="card-img">
-                  <img class="img-fluid card-img-size" src="./images/card/card-snowboard.png" alt="Plan View">
-                </div>
-                <div class="card-title">
-                  <h4 class="card-title">Ski & Snowboards Renting</h4>
-                </div>
-                <div class="card-text">
-                  <p class="card-text">Gast have a full-service ski & snowboard rental shop located at the base of Park City Mountain Resort.
-                     Let our skilled technicians help you find the perfect ski or snowboard equipment to fit your ability level.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <div class="card-img">
-                  <img class="img-fluid card-img-size" src="./images/card/card-swimming-pool.svg" alt="Plan View">
-                </div>
-                <div class="card-title">
-                  <h4 class="card-title">Inner Warm Pool</h4>
-                </div>
-                <div class="card-text">
-                  <p class="card-text">Temperature-controlled swimming pools.
-                     A lazy river. Warm smiles and plenty of Florida sunshine.
-  The pools, lazy river and cabana rentals are for registered guests only.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+ </div>
 
 
-        </div>
 
-      </div>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./apps.js" charset="utf-8"></script>
 
